comment display and a little scoping of indices

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,2 +1,4 @@
 <%= comment.body %>
 <%= link_to_name comment.user %>
+<%= link_to_remote 'reply', :url => reply_to_comment_path(comment), :update => dom_id(comment, 'reply_to'), :method => :get %>
+<%= content_tag(:div, {}, :id => dom_id(comment, 'reply_to')) %>
