--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,5 @@
 
 <%= list_links @user %><br>
 <%= render :partial => 'tags/tag_form', :locals => {:obj => @user} %>
-<%= render :partial => 'comments/comment_form', :locals => {:obj => @user} %>
+<%= render :partial => 'comments/comment_display', :locals => {:obj => @user} %>
 
