--- a/app/views/networks/index.html.erb
+++ b/app/views/networks/index.html.erb
@@ -8,6 +8,7 @@
     <td><%= link_to_name network.state %></td>
     <td><%= link_to 'edit', edit_network_path(network) %></td>
     <td><%= attach_image_link network %></td>
+    <td><%= link_to_remote 'attach site', attach_site_path(network), :method => :get %></td>
   </tr>
 <% end %>
 </table>
