--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,15 @@
     <%= javascript_include_tag :defaults %>
   </head>
   <body>
-    <%= login_stuff %><br>
-    <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores taggings tags users website_uses websites]].each do |set| %>
-      <% set.each do |resource| %>
-        [<%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %>]
-      <% end %><br>
-    <% end %>
+    <%= login_stuff %>
+    <div id='left_nav'>
+      <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores taggings tags users website_uses websites]].each do |set| %>
+        <% set.each do |resource| %>
+          <%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %><br>
+        <% end %>
+      <% end %>
+    </div>
+    <h1 id='splurgel_title'>Splurgel=======!</h1>
     <%= render :partial => 'shared/search_form', :locals => {:model => controller.controller_name} if searchable_models.include?(controller.controller_name) %>
     <%= yield %>
   </body>
