independent tracking for phone numbers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <body>
     <%= login_stuff %>
     <div id='left_nav'>
-      <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores taggings tags users website_uses websites]].each do |set| %>
+      <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores taggings tags users website_uses websites phones phone_uses]].each do |set| %>
         <% set.each do |resource| %>
           <%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %><br>
         <% end %>
