--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,18 +2,18 @@
 
 <table>
   <tr>
-    <th>Phone</th>
     <th>Store</th>
     <th>Schedule</th>
     <th>Address</th>
+    <td>phone</td>
   </tr>
 
 <% for location in @locations %>
   <tr>
-    <td><%=h location.phone %></td>
     <td><%= link_to_name location.store %></td>
     <td><%=h location.schedule.display %></td>
     <td><%= link_to_name location.address %></td>
+    <td><%= location.primary_phone.number if location.primary_phone %></td>
     <td><%= link_to 'show', location %></td>
     <td><%= link_to 'edit', edit_location_path(location) if logged_in? && current_user.administers?(location) %></td>
   </tr>
