--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,5 +15,9 @@
 <p><label for="password_confirmation">Confirm Password</label><br/>
 <%= f.password_field :password_confirmation %></p>
 
+<%= text_field :phone, :number %>phone<br>
+<%= text_field :website, :url %>site<br>
+
+
 <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
