sites attachable from show views

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -28,12 +28,12 @@
     <%= f.text_field :street2 %>
   </p>
   <p>
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
+    <%#= f.label :city %><br />
+    <%#= f.select :city %>
   </p>
   <p>
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
+    <%#= f.label :state %><br />
+    <%#= f.select :state %>
   </p>
   <p>
     <%= f.label :city_id %><br />
