--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,6 +1,7 @@
   <%=h @city.name %><br>
   <%=h @city.state.name %>
   <%= attach_image_link @city %>
+  <%= attachable_sites @city %>
 
 <%= link_to 'edit', edit_city_path(@city) %> |
 <%= link_to 'cities', cities_path %>
