--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -4,6 +4,7 @@
   <%=h @image.width %><br>
   <%= attach_image_link @image %>/
   <%= attach_image_link nil, @image %>
+  <%= attachable_sites @image %>
 
 <%= link_to 'edit', edit_image_path(@image) %> |
 <%= link_to 'images', images_path %>
