--- a/app/views/phone_uses/show.html.erb
+++ b/app/views/phone_uses/show.html.erb
@@ -1,3 +1,3 @@
-
+<%= @phone_use.phone.number %> is used by <%= link_to_name @phone_use.target %><br>
 <%= link_to 'Edit', edit_phone_use_path(@phone_use) %> |
 <%= link_to 'Back', phone_uses_path %>
