--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -1,5 +1,5 @@
 <%=h @website.name %><br>
-<%= link_to @website.href %><br>
+<%= link_to @website.href, @website.href %><br>
 <%= link_to_name @website.user %><br>
 <%= attach_image_link @website %>
 <%= link_to 'edit', edit_website_path(@website) %> |
