--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -5,7 +5,7 @@
   <%= @brand.products.count %> products<br>
   <%= lists @brand %>
 
-
+  <%= attachable_sites @brand %>
 <%= link_to 'edit', edit_brand_path(@brand) %> |
 <%= link_to 'brands', brands_path %>
 <%= link_to_backup %>
