--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
   <head>
     <%= stylesheet_link_tag :all %>
     <%= javascript_include_tag :defaults %>
+    <%= GMap.header if @map %>
+    <%= @map.to_html if @map %>
   </head>
   <body>
     <%= login_stuff %>
