--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -13,7 +13,7 @@
   </p>
   <p>
     <%= f.label :state_id %><br />
-    <%= f.text_field :state_id, State.map_name_and_id %>
+    <%= f.select :state_id, State.map_name_and_id %>
   </p>
   <p>
     <%= f.submit :special %>
