--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,7 +1,8 @@
 <%=h @store.name %>  administered by <%= link_to_name @store.administrator %><br>
 <%= image_tag @store.primary_photo.public_filename  if @store.primary_photo %><br>
 <%= attach_image_link @store %><br>
-<%= lists @stores %><hr>
+<%= lists @store %><hr>
+<%= attachable_sites @store %>
 
 <% @store.locations.each do |l| %>
   <%= link_to l.address.street + ' ' + l.address.city.name, l %><br>
