--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 <%= @user.interests %><br>
 
 <%= list_links @user %><br>
+<%= attachable_sites @user %>
 <%= render :partial => 'tags/tag_form', :locals => {:obj => @user} %>
 <%= render :partial => 'comments/comment_display', :locals => {:obj => @user} %>
 
