--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -9,3 +9,4 @@
 <%= link_to 'edit', edit_brand_path(@brand) %> |
 <%= link_to 'brands', brands_path %>
 <%= link_to_backup %>
+<%= follow_link @brand %>
