--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,6 +4,7 @@ administered by  <%= link_to_name @group.administrator %><br><br>
   <%= @group.users.count %> members!<br>
   <%= attach_image_link @group %>
   <%= attachable_sites @group %>
+  <%= follow_link @group %>
   
   <%= render :partial => 'tags/tag_form', :locals => {:obj => @group} %>
   <%= render :partial => 'comments/comment_form', :locals => {:obj => @group} %>
