--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to_name @membership.user %> is a member of <%= link_to_name @membership.group %> since <%= time_ago_in_words @membership.created_at %><br>
-
+<%= follow_link @membership %>
 <%= link_to 'edit', edit_membership_path(@membership) %> |
 <%= link_to 'memberships', memberships_path %>
 <%= link_to_backup %>
