--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,7 @@
   <%= render :partial => 'tags/tag_form', :locals => {:obj => @product} %><br>
   <%= lists @product %>
   <%= link_to 'offer this product', new_offering_path(:offering => {:product_id => @product.id}) %>
+  <%= follow_link @product %>
 <%= link_to 'edit', edit_product_path(@product) %> |
 <%= link_to 'products', products_path %>
 <%= link_to_backup %>
