--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
 
 <%= list_links @user %><br>
 <%= attachable_sites @user %>
+<%= follow_link @user %>
 <%= render :partial => 'tags/tag_form', :locals => {:obj => @user} %>
 <%= render :partial => 'comments/comment_display', :locals => {:obj => @user} %>
 
