--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -10,7 +10,7 @@
   read <%= time_ago_in_words @message.read_on %> ago
 <% end %><br>
 
-<%= link_to 'reply', new_message_path(:reply_id => @message.id) if current_user?(@message.recipient_id) %>
+<%= link_to 'reply', new_message_path(:message => {:reply_id => @message.id, :recipient_id => @message.user_id}) if current_user?(@message.recipient_id) %>
 
 <%= link_to 'messages', messages_path %>
 <%= link_to_backup %>
