--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,8 @@
 <%= list_links @user %><br>
 <%= attachable_sites @user %>
 <%= follow_link @user %>
+<%= link_to "#{@user.login}'s followed items", user_followings_path(@user) %>
 <%= render :partial => 'tags/tag_form', :locals => {:obj => @user} %>
 <%= render :partial => 'comments/comment_display', :locals => {:obj => @user} %>
 
+<%= link_to 'edit', edit_user_path(@user) if @user == current_user %>
